--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
-        google()
-        mavenCentral()
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
     }
 
     dependencies {
