--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.5
   image_picker: ^0.8.7+5
   provider: ^6.0.5
+  intl: ^0.17.0
   uuid: ^3.0.5
 
 dev_dependencies:
