--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   provider: ^6.0.5
   intl: ^0.17.0
   uuid: ^3.0.5
+  expandable_text: ^2.3.0
+  zoom_pinch_overlay: ^1.3.2
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -58,6 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logod.png
+    - assets/images/logo.png
+    - assets/images/logoo.svg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
