--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   expandable_text: ^2.3.0
   zoom_pinch_overlay: ^1.3.2
   flutter_staggered_grid_view: ^0.4.1
+  dcdg: ^4.1.0
+  material_text_fields: ^1.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
