--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,8 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logod.png
+    - assets/logod.png
+    - assets/0-1.jpg
     - assets/images/logo.png
     - assets/images/logoo.svg
   #   - images/a_dot_ham.jpeg
